Fix TV channel logos - Salt TV uses local, others use placehold.co

--- a/uganda-tv.html
+++ b/uganda-tv.html
@@ -268,7 +268,7 @@
                                 <!-- NTV Uganda -->
                                 <div class="tv-station-card">
                                     <div class="tv-station-thumbnail">
-                                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/NTV_Uganda_logo.png/800px-NTV_Uganda_logo.png" alt="NTV Uganda" onerror="this.src='https://via.placeholder.com/400x225/7CFC00/000000?text=NTV+Uganda'">
+                                        <img src="https://placehold.co/400x225/7CFC00/000000?text=NTV+Uganda" alt="NTV Uganda">
                                     </div>
                                     <div class="tv-station-info">
                                         <h3 class="tv-station-name">NTV Uganda</h3>
@@ -280,7 +280,7 @@
                                 <!-- NBS TV -->
                                 <div class="tv-station-card">
                                     <div class="tv-station-thumbnail">
-                                        <img src="https://upload.wikimedia.org/wikipedia/en/thumb/d/d7/NBS_Television_logo.png/220px-NBS_Television_logo.png" alt="NBS TV" onerror="this.src='https://via.placeholder.com/400x225/FF6B00/FFFFFF?text=NBS+TV'">
+                                        <img src="https://placehold.co/400x225/FF6B00/FFFFFF?text=NBS+TV" alt="NBS TV">
                                     </div>
                                     <div class="tv-station-info">
                                         <h3 class="tv-station-name">NBS TV</h3>
@@ -292,7 +292,7 @@
                                 <!-- UBC TV -->
                                 <div class="tv-station-card">
                                     <div class="tv-station-thumbnail">
-                                        <img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/6f/Uganda_Broadcasting_Corporation_logo.png/220px-Uganda_Broadcasting_Corporation_logo.png" alt="UBC TV" onerror="this.src='https://via.placeholder.com/400x225/0066CC/FFFFFF?text=UBC+TV'">
+                                        <img src="https://placehold.co/400x225/0066CC/FFFFFF?text=UBC+TV" alt="UBC TV">
                                     </div>
                                     <div class="tv-station-info">
                                         <h3 class="tv-station-name">UBC TV</h3>
@@ -304,7 +304,7 @@
                                 <!-- Bukedde TV -->
                                 <div class="tv-station-card">
                                     <div class="tv-station-thumbnail">
-                                        <img src="https://via.placeholder.com/400x225/CC0000/FFFFFF?text=Bukedde+TV" alt="Bukedde TV">
+                                        <img src="https://placehold.co/400x225/CC0000/FFFFFF?text=Bukedde+TV" alt="Bukedde TV">
                                     </div>
                                     <div class="tv-station-info">
                                         <h3 class="tv-station-name">Bukedde TV</h3>
@@ -316,7 +316,7 @@
                                 <!-- Urban TV -->
                                 <div class="tv-station-card">
                                     <div class="tv-station-thumbnail">
-                                        <img src="https://via.placeholder.com/400x225/9900CC/FFFFFF?text=Urban+TV" alt="Urban TV">
+                                        <img src="https://placehold.co/400x225/9900CC/FFFFFF?text=Urban+TV" alt="Urban TV">
                                     </div>
                                     <div class="tv-station-info">
                                         <h3 class="tv-station-name">Urban TV</h3>
@@ -328,7 +328,7 @@
                                 <!-- Spark TV -->
                                 <div class="tv-station-card">
                                     <div class="tv-station-thumbnail">
-                                        <img src="https://via.placeholder.com/400x225/FF1493/FFFFFF?text=Spark+TV" alt="Spark TV">
+                                        <img src="https://placehold.co/400x225/FF1493/FFFFFF?text=Spark+TV" alt="Spark TV">
                                     </div>
                                     <div class="tv-station-info">
                                         <h3 class="tv-station-name">Spark TV</h3>
@@ -340,7 +340,7 @@
                                 <!-- TV West -->
                                 <div class="tv-station-card">
                                     <div class="tv-station-thumbnail">
-                                        <img src="https://via.placeholder.com/400x225/006633/FFFFFF?text=TV+West" alt="TV West">
+                                        <img src="https://placehold.co/400x225/006633/FFFFFF?text=TV+West" alt="TV West">
                                     </div>
                                     <div class="tv-station-info">
                                         <h3 class="tv-station-name">TV West</h3>
@@ -352,7 +352,7 @@
                                 <!-- Salt TV -->
                                 <div class="tv-station-card">
                                     <div class="tv-station-thumbnail">
-                                        <img src="https://via.placeholder.com/400x225/4169E1/FFFFFF?text=Salt+TV" alt="Salt TV">
+                                        <img src="assets/tv-logos/salt-tv.png" alt="Salt TV" onerror="this.src='https://placehold.co/400x225/4169E1/FFFFFF?text=Salt+TV'">
                                     </div>
                                     <div class="tv-station-info">
                                         <h3 class="tv-station-name">Salt TV</h3>
@@ -368,7 +368,7 @@
                                 <!-- TV East -->
                                 <div class="tv-station-card">
                                     <div class="tv-station-thumbnail">
-                                        <img src="https://via.placeholder.com/400x225/FF8C00/FFFFFF?text=TV+East" alt="TV East">
+                                        <img src="https://placehold.co/400x225/FF8C00/FFFFFF?text=TV+East" alt="TV East">
                                     </div>
                                     <div class="tv-station-info">
                                         <h3 class="tv-station-name">TV East</h3>
@@ -380,7 +380,7 @@
                                 <!-- BBS TV -->
                                 <div class="tv-station-card">
                                     <div class="tv-station-thumbnail">
-                                        <img src="https://via.placeholder.com/400x225/FFD700/000000?text=BBS+TV" alt="BBS TV">
+                                        <img src="https://placehold.co/400x225/FFD700/000000?text=BBS+TV" alt="BBS TV">
                                     </div>
                                     <div class="tv-station-info">
                                         <h3 class="tv-station-name">BBS TV</h3>
@@ -392,7 +392,7 @@
                                 <!-- TV North -->
                                 <div class="tv-station-card">
                                     <div class="tv-station-thumbnail">
-                                        <img src="https://via.placeholder.com/400x225/008B8B/FFFFFF?text=TV+North" alt="TV North">
+                                        <img src="https://placehold.co/400x225/008B8B/FFFFFF?text=TV+North" alt="TV North">
                                     </div>
                                     <div class="tv-station-info">
                                         <h3 class="tv-station-name">TV North</h3>
