Fix: Accessibility improvements - add aria-labels and fix form labels

--- a/payment.html
+++ b/payment.html
@@ -325,6 +325,7 @@
                         
                         <div class="form-group">
                             <label class="form-label">Phone Number</label>
+                            <label for="phone" class="form-label">Phone Number</label>
                             <input type="tel" class="form-control" id="phone" placeholder="256XXXXXXXXX" required>
                         </div>
                         
