--- a/player.html
+++ b/player.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Watch Luganda translated movies on Unruly Movies - A legitimate Ugandan entertainment platform developed by Nduga Hafizu featuring licensed VJs.">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#7CFC00">
     <meta name="author" content="Nduga Hafizu">
     <meta name="robots" content="noindex">
