Fix search functionality - change forms to GET method and fix API endpoints/property names

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         </svg>
                     </div>
                     
-                    <form class="header-search input-group d-md-block d-none" method="post" action="search.html">
+                    <form class="header-search input-group d-md-block d-none" method="get" action="search.html">
                         <div class="typeahead__container app-search">
                             <div class="typeahead__field">
                                 <div class="typeahead__query">
@@ -178,7 +178,7 @@
                                             <path d="m21 21-4.35-4.35"></path>
                                         </svg>
                                     </label>
-                                    <input class="video-search form-control" name="q" type="text" id="search-input" placeholder="Search Luganda movies, VJs..." autocomplete="off">
+                                    <input class="video-search form-control" name="q" type="text" id="search-input" placeholder="Search Luganda movies, VJs..." autocomplete="off" required>
                                 </div>
                             </div>
                         </div>
