--- a/uganda-tv.html
+++ b/uganda-tv.html
@@ -210,7 +210,7 @@
                         </svg>
                     </div>
                     
-                    <form class="header-search input-group d-md-block d-none" method="post" action="search.html">
+                    <form class="header-search input-group d-md-block d-none" method="get" action="search.html">
                         <div class="typeahead__container app-search">
                             <div class="typeahead__field">
                                 <div class="typeahead__query">
