--- a/search.html
+++ b/search.html
@@ -636,6 +636,17 @@
                     </div>
                 </div>
 
+                <!-- Ad Banner - Below Results Header -->
+                <div class="ad-container" style="margin: 20px auto; max-width: 728px; text-align: center;">
+                    <ins class="adsbygoogle"
+                         style="display:block"
+                         data-ad-client="ca-pub-1904736753681797"
+                         data-ad-slot="auto"
+                         data-ad-format="horizontal"
+                         data-full-width-responsive="true"></ins>
+                    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+                </div>
+
                 <!-- Results Grid -->
                 <div class="results-grid" id="resultsGrid">
                     <!-- Trending Searches (shown when no search) -->
