Add navigation menu, softer green color, fix accessibility, add movies script, reduce VJ logo size

--- a/movies.html
+++ b/movies.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Browse Luganda translated movies on Unruly Movies. Watch films translated by licensed Ugandan VJs. A legitimate platform developed by Nduga Hafizu.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#7CFC00">
+    <meta name="theme-color" content="#66BB6A">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Nduga Hafizu">
     <link rel="canonical" href="https://watch.unrulymovies.com/movies.html">
@@ -172,13 +172,13 @@
                     <!-- Mobile Search Form -->
                     <form class="mobile-search-form" id="mobileSearchForm" method="get" action="search.html">
                         <input type="text" name="q" placeholder="Search movies, VJs..." class="mobile-search-input" id="mobileSearchInput" required>
-                        <button type="submit" class="mobile-search-submit">
+                        <button type="submit" class="mobile-search-submit" title="Search">
                             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <circle cx="11" cy="11" r="8"></circle>
                                 <path d="m21 21-4.35-4.35"></path>
                             </svg>
                         </button>
-                        <button type="button" class="mobile-search-close" id="mobileSearchClose">
+                        <button type="button" class="mobile-search-close" id="mobileSearchClose" title="Close search">
                             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <line x1="18" y1="6" x2="6" y2="18"></line>
                                 <line x1="6" y1="6" x2="18" y2="18"></line>
