Add duplicate Google site verification meta tag in index.html

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="canonical" href="https://watch.unrulymovies.com/">
     <meta name="google-adsense-account" content="ca-pub-1904736753681797">
     <meta name="google-site-verification" content="ZETgIS2RUYfcmNN7z0_OCZ7CjNP4LbfPI-F1MD7uiyY">
+    <meta name="google-site-verification" content="LhqhmhY1yPoQxVg8znDH4aKifHlXtc8S8m-UMHtBrXY">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
