Fix Google OAuth branding: update app name and highlight privacy link

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     </div>
                     <div class="app-navbar">
                         <a href="index.html" class="navbar-brand">
-                            <img src="assets/images/logo.png" alt="Luganda Movies" width="180" height="50">
+                            <img src="assets/images/logo.png" alt="Unruly Movies" width="180" height="50">
                         </a>
                     </div>
                     <div class="search-btn d-md-none d-block" id="mobileSearchBtn">
@@ -643,12 +643,12 @@
                         <div class="footer-text my-3">
                             <div style="margin-bottom: 15px;">
                                 <a href="terms.html" style="margin: 0 10px; color: #888;">Terms of Service</a> |
-                                <a href="privacy.html" style="margin: 0 10px; color: #888;">Privacy Policy</a> |
+                                <a href="privacy.html" style="margin: 0 10px; color: #7CFC00; font-weight: bold;">Privacy Policy</a> |
                                 <a href="dmca.html" style="margin: 0 10px; color: #888;">DMCA</a> |
                                 <a href="about.html" style="margin: 0 10px; color: #888;">About Us</a> |
                                 <a href="contact.html" style="margin: 0 10px; color: #888;">Contact</a>
                             </div>
-                            &copy; 2025 <strong>Unruly Movies</strong>. Developed by <strong>Nduga Hafizu</strong>. All rights reserved.<br>
+                            &copy; 2026 <strong>Unruly Movies</strong>. Developed by <strong>Nduga Hafizu</strong>. All rights reserved.<br>
                             <small style="color: #666;">A legitimate Ugandan platform for Luganda VJ translations by licensed Video Jockeys.</small>
                         </div>
                     </div>
