--- a/index.html
+++ b/index.html
@@ -582,6 +582,72 @@
                                 </div>
                             </div>
 
+                            <!-- What is VJ Translation Section -->
+                            <div class="vj-info-section" style="background: linear-gradient(135deg, #1a1a2e 0%, #16213e 100%); border-radius: 16px; padding: 30px; margin: 25px 0; border: 1px solid #7CFC00;">
+                                <div class="row align-items-center">
+                                    <div class="col-md-8">
+                                        <h2 style="color: #7CFC00; font-size: 1.5rem; margin-bottom: 15px; display: flex; align-items: center; gap: 10px;">
+                                            <svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="#7CFC00" stroke-width="2">
+                                                <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path>
+                                                <path d="M9 12l2 2 4-4"></path>
+                                            </svg>
+                                            Uganda's Legitimate VJ Translation Platform
+                                        </h2>
+                                        <p style="color: #ccc; line-height: 1.7; margin-bottom: 15px;">
+                                            <strong style="color: #fff;">Video Jockeys (VJs)</strong> are licensed entertainment professionals in Uganda who translate foreign films into local languages like Luganda. This is a <strong style="color: #7CFC00;">recognized cultural industry</strong> in East Africa, providing accessible entertainment to millions.
+                                        </p>
+                                        <div style="display: flex; flex-wrap: wrap; gap: 15px; margin-top: 20px;">
+                                            <div style="display: flex; align-items: center; gap: 8px; color: #888;">
+                                                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#7CFC00" stroke-width="2">
+                                                    <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path>
+                                                    <polyline points="22 4 12 14.01 9 11.01"></polyline>
+                                                </svg>
+                                                <span>Licensed VJ Translators</span>
+                                            </div>
+                                            <div style="display: flex; align-items: center; gap: 8px; color: #888;">
+                                                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#7CFC00" stroke-width="2">
+                                                    <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path>
+                                                    <polyline points="22 4 12 14.01 9 11.01"></polyline>
+                                                </svg>
+                                                <span>Cultural Entertainment</span>
+                                            </div>
+                                            <div style="display: flex; align-items: center; gap: 8px; color: #888;">
+                                                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#7CFC00" stroke-width="2">
+                                                    <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path>
+                                                    <polyline points="22 4 12 14.01 9 11.01"></polyline>
+                                                </svg>
+                                                <span>Secure SSL Encryption</span>
+                                            </div>
+                                            <div style="display: flex; align-items: center; gap: 8px; color: #888;">
+                                                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#7CFC00" stroke-width="2">
+                                                    <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path>
+                                                    <polyline points="22 4 12 14.01 9 11.01"></polyline>
+                                                </svg>
+                                                <span>Google AdSense Verified</span>
+                                            </div>
+                                            <div style="display: flex; align-items: center; gap: 8px; color: #888;">
+                                                <div style="background: #7CFC00; color: #000; padding: 2px 8px; border-radius: 4px; font-weight: bold; font-size: 0.75rem;">PG-13</div>
+                                                <span>Parental Guidance</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4 text-center mt-3 mt-md-0">
+                                        <div style="display: inline-block; background: rgba(124, 252, 0, 0.1); border: 2px solid #7CFC00; border-radius: 12px; padding: 15px 20px; margin-bottom: 15px;">
+                                            <div style="font-size: 2rem; font-weight: bold; color: #7CFC00;">PG-13</div>
+                                            <div style="color: #888; font-size: 0.8rem;">Parental Guidance<br>Suggested for 13+</div>
+                                        </div>
+                                        <br>
+                                        <a href="about.html" class="btn" style="background: #7CFC00; color: #000; padding: 12px 30px; border-radius: 30px; font-weight: 600; text-decoration: none; display: inline-block;">
+                                            Learn More About VJs
+                                        </a>
+                                        <p style="color: #666; font-size: 0.85rem; margin-top: 15px;">
+                                            Developed by <strong style="color: #7CFC00;">Nduga Hafizu</strong><br>
+                                            🇺🇬 Made in Uganda
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
                             <!-- Ad Banner - Below Hero -->
                             <div class="ad-container" style="margin: 20px 0; text-align: center;">
                                 <ins class="adsbygoogle"
