Fix: API_CONFIG.API_URL undefined - use BASE_URL instead

--- a/dashboard.html
+++ b/dashboard.html
@@ -741,7 +741,7 @@
     <script src="js/config.js"></script>
     <script src="js/auth.js"></script>
     <script>
-        const API_URL = API_CONFIG.API_URL;
+        const API_URL = API_CONFIG.BASE_URL + '/api';
         let currentUser = null;
 
         // Check authentication with retry and better error handling
