--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/trailer-player.css">
+    <link rel="stylesheet" href="css/mobile-improvements.css">
     
     <!-- Preload fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -750,8 +751,11 @@
                 </div>
             </div>
 
-            <!-- Data Privacy & Transparency Section (Google OAuth Requirement) -->
-            <section class="data-transparency-section" style="background: linear-gradient(135deg, #1a1a2e 0%, #16213e 100%); padding: 60px 20px; margin: 0;">
+            <!-- Professional Footer -->
+            <footer class="site-footer">
+                <div class="footer-main">
+                    <!-- Data Privacy & Transparency Section (Google OAuth Requirement) -->
+                    <section class="data-transparency-section" style="background: linear-gradient(135deg, #1a1a2e 0%, #16213e 100%); padding: 60px 20px; margin: 0 0 40px 0; border-radius: 12px;">
                 <div class="container" style="max-width: 1200px; margin: 0 auto;">
                     <div style="text-align: center; margin-bottom: 40px;">
                         <h2 style="color: #7CFC00; font-size: 2rem; margin-bottom: 15px;">🔒 Your Privacy & Data Security</h2>
@@ -838,9 +842,6 @@
                 </div>
             </section>
 
-            <!-- Professional Footer -->
-            <footer class="site-footer">
-                <div class="footer-main">
                     <div class="footer-grid">
                         <!-- Brand Section -->
                         <div class="footer-brand">
